@@ -4866,9 +4866,9 @@ SCIP_DECL_CONSPARSE(consParseLogicor)
 
    if( endptr > startptr )
    {
-      /* copy string for parsing */
-      SCIP_CALL( SCIPduplicateBufferArray(scip, &strcopy, startptr, (int)(endptr-startptr)) );
-
+      /* copy string for parsing; note that isspace() in SCIPparseVarsList() requires that strcopy end with '\0' */
+      SCIP_CALL( SCIPduplicateBufferArray(scip, &strcopy, startptr, (int)(endptr-startptr+1)) );
+      strcopy[endptr-startptr] = '\0';
       varssize = 100;
       nvars = 0;
 
