@@ -622,6 +622,7 @@ Fixed bugs
 - avoid probing on variables with huge bounds in shift and propagate heuristic
 - fix issue in printing solutions for variables that have been added by the dual sparsify presolver
 - fix issue related to fixing redundant logic-or constraints after presolving
+- fixed bug when parsing logic-or and and-constraints
 
 Miscellaneous
 -------------
